# mlflow-example

./: MLproject  Makefile  README.md  conda_env.yml  history.md  product_sales_margin_analysis.ipynb  pyproject.toml  train.py  train_multiclass.py
mlexample/: multiclass_example.py
